# VDG_AgentSandBox

./: README.md
.github/workflows/: build-sandbox.yml
docs/refs/codex/: PROVENANCE.md
src/native/macos-seatbelt-spawn/: Cargo.toml  README.md
src/native/macos-seatbelt-spawn/src/: main.rs
src/native/windows-restricted-spawn/: Cargo.toml  README.md
src/native/windows-restricted-spawn/src/: main.rs
