# VDG #472-E E-2a — our standalone bin that runs a command under codex's non-admin (RestrictedToken)
# Windows sandbox. It DEPENDS ON the vendored codex crate (links the lib, calls the pub
# run_windows_sandbox_capture) — it does NOT modify any codex source. A C# agent spawns this bin like
# codex-linux-sandbox. Empty [workspace] = own root, so it is not auto-joined to the codex-rs workspace.
[package]
name = "vdg-windows-restricted-spawn"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

# Default bin from src/main.rs (named after the package) — no [[bin]] src/bin path, so the repo's
# [Bb]in/ gitignore rule never matches our source.

[dependencies]
anyhow = "1.0"
codex-windows-sandbox = { path = "../../../docs/refs/codex/codex-rs/windows-sandbox-rs" }

# Our standalone crate doesn't inherit the codex-rs workspace's [patch] set or its Cargo.lock, so
# transitive deps re-resolve and diverge. We mirror codex-rs's FULL [patch] (revs copied verbatim from
# docs/refs/codex/codex-rs/Cargo.toml) AND copy its Cargo.lock here, so versions resolve identically.
[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", rev = "87db8bfa6dc99427fd3b071681b07fc31c6ce995" }
ratatui = { git = "https://github.com/nornagon/ratatui", rev = "9b2ad1298408c45918ee9f8241a6f95498cdbed2" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
